--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,7 @@
 @import "../scss/blocks/_footer.scss";
 @import "../scss/blocks/modal";
 @import "../scss/blocks/_media.scss";
+@import "../scss/blocks/_theme.scss";
 
 
 
