--- a/assets/scss/blocks/_intro.scss
+++ b/assets/scss/blocks/_intro.scss
@@ -1,6 +1,5 @@
-$font_color: #5A1404;
-$yellow: #FFCD00;
-$red: #E63000;
+@import "_theme.scss";
+
 
 * {
     font-size: 16px;
@@ -16,6 +15,8 @@ $red: #E63000;
     transition: .3s;
 
 }
+
+
 
 
 .container {
@@ -57,7 +58,7 @@ $red: #E63000;
     .intro_bg_top {
         position: absolute;
         z-index: -1;
-        background-color: #FFCD00;
+        background-color: $yellow;
         border-radius: 70%;
     }
 
@@ -66,7 +67,7 @@ $red: #E63000;
         top: 520px;
 
         z-index: -2;
-        background: linear-gradient(180deg, #ECB200 0%, #FFCF00 78.83%);
+        background: linear-gradient(180deg, $orange 0%, $yellow 78.83%);
         width: 100%;
         height: 58%;
     }
@@ -90,7 +91,7 @@ $red: #E63000;
         color: $red;
         text-transform: uppercase;
 
-        text-shadow: -3px 3px #fff;
+        text-shadow: -3px 3px $white;
     }
 
     .intro_str {
@@ -128,7 +129,7 @@ $red: #E63000;
         position: relative;
         width: 100%;
         height: 20px;
-        background: #fff;
+        background: $white;
 
         .intro_balloon {
             position: absolute;
@@ -168,15 +169,15 @@ $red: #E63000;
     margin-top: -30px;
     padding: 15px 60px;
     background-color: $red;
-    border: 9px solid #fff;
-    color: #fff;
+    border: 9px solid $white;
+    color: $white;
     text-transform: uppercase;
     border-radius: 30px;
     font-size: 16px;
 
     &:hover {
-        background-color: #b42700;
-        box-shadow: 0px 0px 10px 5px #fff;
+        background-color: $red-hover;
+        box-shadow: 0px 0px 10px 5px $white;
     }
 }
 
