--- a/assets/scss/blocks/_modal.scss
+++ b/assets/scss/blocks/_modal.scss
@@ -1,3 +1,4 @@
+@import "_theme.scss";
 
 body {
     .modal_window {
@@ -17,7 +18,7 @@ body {
         background-color: rgba(0, 0, 0, 0.5);
         .window {
             width: 50%;
-            background-color: #fff;
+            background-color: $white;
             height: 50vh;
             position: relative;
         }
@@ -35,7 +36,7 @@ body {
                 align-self: center;
                 width: 100%;
                 height: 0;
-                background-color: #5B1A0D;
+                background-color: $font_color;
         
                 &::after,
                 &::before {
@@ -45,7 +46,7 @@ body {
                     width: 100%;
                     height: 3px;
                     position: relative;
-                    background-color: #5B1A0D;
+                    background-color: $font_color;
         
                 }
         
